<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.danielmilano.domain.entities.Country" />

        <variable
            name="country"
            type="com.danielmilano.domain.entities.Country" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/country_logo"
            android:layout_width="140dp"
            android:layout_height="80dp"
            app:flag="@{country.flag}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/country_name"
            app:layout_constraintStart_toStartOf="@id/country_details_table"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:background="@color/md_grey_400" />

        <TextView
            android:id="@+id/country_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:text="@{country.name}"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/country_logo"
            app:layout_constraintEnd_toEndOf="@id/country_details_table"
            app:layout_constraintStart_toEndOf="@id/country_logo"
            app:layout_constraintTop_toTopOf="@id/country_logo"
            tools:text="Italy" />

        <TableLayout
            android:id="@+id/country_details_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country_logo"
            app:layout_constraintVertical_bias="0.0">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/code_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_detail_fragment_country_code_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/code_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{country.code}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/native_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_detail_fragment_native_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/native_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{country.native}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/currency_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_detail_fragment_currency_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/currency_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:currency="@{country.currency}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/continent_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_detail_fragment_continent_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/continent_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{country.continent}" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/languages_label"
                    android:layout_height="wrap_content"
                    android:text="@string/country_detail_fragment_languages_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/languages_value"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="8dp"
                    app:languages="@{country.languages}" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>